--- a/README
+++ b/README
@@ -5,6 +5,37 @@ A hobby project of mine. Work in progress.
 ultraELF is under The GNU General Public License 3, or (at your option)
 any later version. See LICENSE file.
 
-For compiling and loading instructions see file ultraelf.asd .
-
 All my code copyright (C) 2016 Antti Nuortimo.
+
+ultraELF compiles at least with SBCL (tested with SBCL 1.2.4.debian).
+For compiling and loading instructions please see file ultraelf.asd .
+
+All tests pass, except tests related to rep, repz/repe, repnz/repne.
+So you should receive a message "15 out of 181 total tests failed" when
+running `(test-x64-assembling-functions)` following the instructions
+in ultraelf.asd . The reason for this is that rep, repz/repe,
+repnz/repne have not been implemented yet.
+
+Implemented functionality:
+o Binary code generation for quite many x86-64 instruction encodings.
+o Generation of all different functionally equivalent encodings for
+  quite many x86-64 instructions.
+
+Future developments underway:
+o Code generation for all x86-64 instruction encodings.
+o Writing of executable files.
+o Disassembler.
+o Metamorphic engine.
+o Support for x86-16.
+o Support for x86-32.
+o Support for ARM.
+o Support for other CPU architectures.
+
+contact info (found bugs and suggestions are welcome):
+name:           Antti Nuortimo
+GitHub:         https://github.com/nrz
+Stack Overflow: http://stackoverflow.com/users/1310991/nrz
+email:          ylikuutio at gmail dot com
+                (please write 'ultraelf' to email title to escape /dev/null)
+
+Work offers are also very welcome!
