"_multiarchitecture_ assembler, disassembler and metamorphic engine."
	modified:   README

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-ultraELF x86-64 assembler, disassembler and metamorphic engine.
+ultraELF multiarchitecture assembler, disassembler and metamorphic engine.
 
 A hobby project of mine. Work in progress.
 
