--- a/README
+++ b/README
@@ -9,6 +9,7 @@ All my code copyright (C) 2016 Antti Nuortimo.
 
 ultraELF compiles at least with SBCL (tested with SBCL 1.2.4.debian).
 For compiling and loading instructions please see file ultraelf.asd .
+For manual please see file manual.txt .
 
 All tests pass, except tests related to rep, repz/repe, repnz/repne.
 So you should receive a message "15 out of 181 total tests failed" when
@@ -20,12 +21,14 @@ Implemented functionality:
 o Binary code generation for quite many x86-64 instruction encodings.
 o Generation of all different functionally equivalent encodings for
   quite many x86-64 instructions.
+o Using Common Lisp as a macro language in ultraELF assembler.
 
 Future developments underway:
 o Code generation for all x86-64 instruction encodings.
 o Writing of executable files.
 o Disassembler.
 o Metamorphic engine.
+o Steganographic assembler.
 o Support for x86-16.
 o Support for x86-32.
 o Support for ARM.
