"found bugs and suggestions are _very_ welcome!"
	modified:   README

--- a/README
+++ b/README
@@ -34,7 +34,7 @@ o Support for x86-32.
 o Support for ARM.
 o Support for other CPU architectures.
 
-contact info (found bugs and suggestions are welcome):
+contact info (found bugs and suggestions are very welcome!):
 name:           Antti Nuortimo
 GitHub:         https://github.com/nrz
 Stack Overflow: http://stackoverflow.com/users/1310991/nrz
