--- a/README
+++ b/README
@@ -31,6 +31,7 @@ o Support for x86-16.
 o Support for x86-32.
 o Support for ARM.
 o Support for other CPU architectures.
+o Porting to C++ (with TinyScheme as a macro language).
 
 contact info (found bugs and suggestions are very welcome!):
 name:           Antti Nuortimo
