--- a/README
+++ b/README
@@ -3,7 +3,7 @@ ultraELF multiarchitecture assembler, disassembler and metamorphic engine.
 A hobby project of mine. Work in progress.
 
 ultraELF is under The GNU General Public License 3, or (at your option)
-any later version. See LICENSE file.
+any later version. See COPYING file.
 
 All my code copyright (C) 2016 Antti Nuortimo.
 
